sort.basic.lessons.sort.basic.bubble.AlgBubbleSort3.scala.code
def bubbleSort3() {
  var switch:Boolean=true
  for(i<-1 to getNombreValeurs()){
    for(k<-0 to getNombreValeurs()-(i+1)){
      if (plusPetit(k+1,k)) {echange(k+1,k);switch=true}
    }
    if ((!switch){return})
  }
}